# regExp-Engine

./: Cargo.toml  Clippy backlog  README.md
.github/workflows/: ci.yml
src/: dfa.rs  main.rs  nfa.rs  state.rs
